<resources>
    <string name="app_name">video-editor</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home_new_theme">Theme mới nhất</string>
    <string name="recent">Recent</string>
    <string name="video">Video</string>
    <string name="images">Ảnh</string>
    <string name="all">Tất cả</string>
    <string name="recent_show_more_desc">Giữ và kéo để sắp xếp lại</string>
    <string name="recent_continue">Kế tiếp (%d)</string>
    <string name="edit">Edit</string>
    <string name="theme">Theme</string>
    <string name="effect">Effect</string>
    <string name="music">Music</string>
    <string name="transition">Transition</string>
    <string name="filter">Filter</string>
    <string name="text">Text</string>
    <string name="zoom">Zoom</string>
    <string name="export">Export</string>
    <string name="export_info">Duration: %s\nEstimated Size: %s\nResolution: %s</string>
    <string name="exporting_your_video">exporting your video</string>
    <string name="cancel">Hủy</string>
    <string name="share">Chia sẻ</string>
    <string name="success">Success</string>
    <string name="result_message">Saved to your gallery successfully</string>
    <string name="share_to">Share to</string>
    <string name="share_whats_app">Whats App</string>
    <string name="share_messager">Messenger</string>
    <string name="share_youtube">Youtube</string>
    <string name="share_instagram">Instagram</string>
    <string name="share_facebook">Facebook</string>
    <string name="share_email">Email</string>
    <string name="share_line">LINE</string>
    <string name="share_more">Thêm</string>
    <string name="duration">Duration</string>
    <string name="edit_duration_total">Duration\t\t&lt;font color=#F9764D>%s&lt;/font></string>
    <string name="sticker">Sticker</string>
    <string name="keyboard">Keyboard</string>
    <string name="style">Style</string>
    <string name="font">Font</string>
    <string name="color">Color</string>
    <string name="custom">Custom</string>
    <string name="recently">Recently</string>
    <string name="opacity">Opacity</string>
    <string name="outline">Outline</string>
    <string name="spacing">Spacing</string>
    <string name="tab_filter">Filter</string>
    <string name="clip_number_format">&lt;font color=#F9764D>%d&lt;/font> clips</string>
</resources>