<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <include
        android:id="@+id/layout_toolbar"
        layout="@layout/all_view_toolbar_text_center" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px26"
        android:drawablePadding="@dimen/px10"
        android:text="@string/success"
        android:textColor="@color/white"
        android:textSize="@dimen/ds_sp20"
        app:drawableStartCompat="@drawable/result_vector_success"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_toolbar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_success_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px26"
        android:text="@string/result_message"
        android:textColor="@color/white"
        android:textSize="@dimen/ds_sp13"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_success" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_media_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/layout_share"
        app:layout_constraintTop_toBottomOf="@+id/tv_success_message"
        app:layout_constraintVertical_bias="0.40">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_cover"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/px30"
            android:layout_marginRight="@dimen/px30"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/all_vector_play_video" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/px30"
            android:layout_marginEnd="@dimen/px12"
            android:background="@color/black_3A3A3A"
            app:layout_constraintBottom_toBottomOf="@+id/tv_share_to"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tv_share_to"
            app:layout_constraintTop_toTopOf="@id/tv_share_to" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/px12"
            android:layout_marginEnd="@dimen/px30"
            android:background="@color/black_3A3A3A"
            app:layout_constraintBottom_toBottomOf="@+id/tv_share_to"
            app:layout_constraintLeft_toRightOf="@+id/tv_share_to"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_share_to" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_share_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/px16"
            android:text="@string/share_to"
            android:textColor="@color/white"
            android:textSize="@dimen/ds_sp16"
            app:layout_constraintBottom_toTopOf="@+id/rv_share"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:paddingStart="@dimen/px10"
            android:paddingEnd="@dimen/px10"
            android:paddingBottom="@dimen/px12"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:spanCount="4"
            tools:itemCount="8"
            tools:listitem="@layout/item_share" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>